--- a/KakatinHelmet/app/src/main/res/values/strings.xml
+++ b/KakatinHelmet/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">KakatinHelmet</string>
     <string name="action_settings">Settings</string>
+    <string name="test_window">Test window</string>
 </resources>
